--- a/Player Embedding.ipynb
+++ b/Player Embedding.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "source": [
     "### DEFINITIONS\n",
-    "1) \"outcomes\" are defined to be the end of a sequence of prior events that are of interest."
+    "1) \"outcomes\" is defined to be the end of a sequence of prior events that are of interest."
    ]
   },
   {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,12 +199,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Checking functions"
+    "## Implementing functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
        "4  Jillian Dempsey  Incomplete Play  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "4  19  19   1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "array([0, 0, 0, 1, 0, 0, 0, 0, 0, 0], dtype=uint8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "       'Goal'], dtype=object)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -702,7 +702,7 @@
        "4  0  1  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  0  0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "4       1                  5                  5           196            20"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,7 @@
        "4             174              82  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1161,7 +1161,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
        "4  19  19   1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,17 +1291,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_test_split = 0.8\n",
+    "train_test_split = 0.9\n",
     "split = int(train_test_split*nrow)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,12 +1318,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Keras Hypermodel"
+    "## Mixed Data Neural Network"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,19 +1378,13 @@
     "                learning_rate=hp.Float('learning_rate', \n",
     "                                       min_value=1e-4, \n",
     "                                       max_value=1e-2,\n",
-    "                                       sampling='LOG'),\n",
-    "                loss='binary_crossentropy',\n",
-    "                metrics=['accuracy'])\n",
+    "                                       sampling='LOG')\n",
+    "            ),\n",
+    "            loss='binary_crossentropy',\n",
+    "            metrics=['accuracy']\n",
     "        )\n",
     "        \n",
     "        return model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hyperparameter Tuning"
    ]
   },
   {
@@ -1398,7 +1392,254 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input_shape = (X_train_player.shape[1],)\n",
+    "n_players = len(load.Player.unique())\n",
+    "emb_dim = 20\n",
+    "\n",
+    "hypermodel = Hypermodel(input_shape, n_players, emb_dim)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hyperparameter Tuning"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from kerastuner.tuners import RandomSearch\n",
+    "from keras.callbacks import EarlyStopping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner = RandomSearch(\n",
+    "    hypermodel,\n",
+    "    objective='val_accuracy',\n",
+    "    seed=1,\n",
+    "    max_trials=10,\n",
+    "    executions_per_trial=2,\n",
+    "    directory='random_search',\n",
+    "    overwrite=True\n",
+    ")\n",
+    "\n",
+    "stop_early = EarlyStopping(monitor='val_loss', patience=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search space summary\n",
+      "Default search space size: 5\n",
+      "units_1 (Int)\n",
+      "{'default': None, 'conditions': [], 'min_value': 16, 'max_value': 128, 'step': 16, 'sampling': None}\n",
+      "activation_1 (Choice)\n",
+      "{'default': 'relu', 'conditions': [], 'values': ['relu', 'tanh', 'sigmoid'], 'ordered': False}\n",
+      "units_2 (Int)\n",
+      "{'default': None, 'conditions': [], 'min_value': 16, 'max_value': 128, 'step': 16, 'sampling': None}\n",
+      "activation_2 (Choice)\n",
+      "{'default': 'relu', 'conditions': [], 'values': ['relu', 'tanh', 'sigmoid'], 'ordered': False}\n",
+      "learning_rate (Float)\n",
+      "{'default': 0.0001, 'conditions': [], 'min_value': 0.0001, 'max_value': 0.01, 'step': None, 'sampling': 'log'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuner.search_space_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trial 10 Complete [00h 00m 03s]\n",
+      "val_accuracy: 0.9636871218681335\n",
+      "\n",
+      "Best val_accuracy So Far: 0.9636871218681335\n",
+      "Total elapsed time: 00h 00m 36s\n",
+      "INFO:tensorflow:Oracle triggered exit\n"
+     ]
+    }
+   ],
+   "source": [
+    "N_EPOCH_SEARCH = 10\n",
+    "tuner.search(X_train_player, y_train, epochs=N_EPOCH_SEARCH, \n",
+    "             validation_split=0.2, callbacks=[stop_early])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results summary\n",
+      "Results in random_search\\untitled_project\n",
+      "Showing 1 best trials\n",
+      "Objective(name='val_accuracy', direction='max')\n",
+      "Trial summary\n",
+      "Hyperparameters:\n",
+      "units_1: 32\n",
+      "activation_1: relu\n",
+      "units_2: 48\n",
+      "activation_2: relu\n",
+      "learning_rate: 0.0017611785596585996\n",
+      "Score: 0.9636871218681335\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuner.results_summary(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "45/45 [==============================] - 1s 6ms/step - loss: 0.4277 - accuracy: 0.9629 - val_loss: 0.1625 - val_accuracy: 0.9637\n",
+      "Epoch 2/3\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1634 - accuracy: 0.9629 - val_loss: 0.1589 - val_accuracy: 0.9637\n",
+      "Epoch 3/3\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1505 - accuracy: 0.9629 - val_loss: 0.1617 - val_accuracy: 0.9637\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x2b4021ba880>"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_hyppar = tuner.get_best_hyperparameters(num_trials=1)[0]\n",
+    "final_model = tuner.hypermodel.build(best_hyppar)\n",
+    "final_model.fit(X_train_player, y_train, epochs=3, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "embedding (Embedding)        (None, 3, 20)             2520      \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 3, 32)             672       \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 3, 48)             1584      \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 3, 1)              49        \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 3, 1)              0         \n",
+      "=================================================================\n",
+      "Total params: 4,825\n",
+      "Trainable params: 4,825\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/7 [==============================] - 0s 1ms/step - loss: 0.2038 - accuracy: 0.9497\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = final_model.evaluate(X_test_player, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = final_model.predict(X_test_player)\n",
+    "pred = np.argmax(pred, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "cm = confusion_matrix(np.array(y_test), pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "roc_auc_score(test_Y, pred)"
+   ]
   }
  ],
  "metadata": {
