--- a/Player Embedding.ipynb
+++ b/Player Embedding.ipynb
@@ -1301,17 +1301,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_train_player = encoded_players.loc[random_ind[:split]]\n",
     "X_train_event = final_event_data.loc[random_ind[:split]]\n",
     "y_train = target_encoded_events.iloc[random_ind[:split], -1:] # last column is Goal\n",
+    "y_train = np.array(y_train).reshape(y_train.shape[0], 1)\n",
     "\n",
     "X_test_player = encoded_players.loc[random_ind[split:]]\n",
     "X_test_event = final_event_data.loc[random_ind[split:]]\n",
-    "y_test = target_encoded_events.iloc[random_ind[split:], -1:] # last column is Goal"
+    "y_test = target_encoded_events.iloc[random_ind[split:], -1:] # last column is Goal\n",
+    "y_test = np.array(y_test).reshape(y_test.shape[0], 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1786, 3)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_player.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1786, 1)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.shape"
    ]
   },
   {
@@ -1323,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,14 +1374,14 @@
     "import tensorflow\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras.layers import (Embedding, InputLayer, Dense,\n",
-    "                                     Activation)\n",
+    "                                     Flatten, Activation)\n",
     "from tensorflow.keras import optimizers\n",
     "from tensorflow.keras import metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,6 +1412,7 @@
     "                  activation=hp.Choice('activation_2', \n",
     "                                       values=['relu', 'tanh', 'sigmoid']))\n",
     "        )\n",
+    "        model.add(Flatten(data_format=None))\n",
     "        model.add(Dense(units=1))\n",
     "        model.add(Activation(activation='sigmoid'))\n",
     "        \n",
@@ -1381,7 +1424,7 @@
     "                                       sampling='LOG')\n",
     "            ),\n",
     "            loss='binary_crossentropy',\n",
-    "            metrics=['accuracy']\n",
+    "            metrics=[metrics.BinaryAccuracy(), metrics.AUC()]\n",
     "        )\n",
     "        \n",
     "        return model"
@@ -1389,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1409,23 +1452,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import kerastuner\n",
     "from kerastuner.tuners import RandomSearch\n",
     "from keras.callbacks import EarlyStopping"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "tuner = RandomSearch(\n",
     "    hypermodel,\n",
-    "    objective='val_accuracy',\n",
+    "    objective=kerastuner.Objective(\"auc\", direction=\"max\"),\n",
     "    seed=1,\n",
     "    max_trials=10,\n",
     "    executions_per_trial=2,\n",
@@ -1438,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1466,18 +1510,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 10 Complete [00h 00m 03s]\n",
-      "val_accuracy: 0.9636871218681335\n",
+      "Trial 10 Complete [00h 00m 04s]\n",
+      "auc: 0.8561235070228577\n",
       "\n",
-      "Best val_accuracy So Far: 0.9636871218681335\n",
-      "Total elapsed time: 00h 00m 36s\n",
+      "Best auc So Far: 0.9141269624233246\n",
+      "Total elapsed time: 00h 00m 44s\n",
       "INFO:tensorflow:Oracle triggered exit\n"
      ]
     }
@@ -1490,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1500,15 +1544,15 @@
       "Results summary\n",
       "Results in random_search\\untitled_project\n",
       "Showing 1 best trials\n",
-      "Objective(name='val_accuracy', direction='max')\n",
+      "Objective(name='auc', direction='max')\n",
       "Trial summary\n",
       "Hyperparameters:\n",
-      "units_1: 32\n",
-      "activation_1: relu\n",
+      "units_1: 64\n",
+      "activation_1: tanh\n",
       "units_2: 48\n",
       "activation_2: relu\n",
-      "learning_rate: 0.0017611785596585996\n",
-      "Score: 0.9636871218681335\n"
+      "learning_rate: 0.008520876742029873\n",
+      "Score: 0.9141269624233246\n"
      ]
     }
    ],
@@ -1525,28 +1569,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "45/45 [==============================] - 1s 6ms/step - loss: 0.4277 - accuracy: 0.9629 - val_loss: 0.1625 - val_accuracy: 0.9637\n",
-      "Epoch 2/3\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1634 - accuracy: 0.9629 - val_loss: 0.1589 - val_accuracy: 0.9637\n",
-      "Epoch 3/3\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1505 - accuracy: 0.9629 - val_loss: 0.1617 - val_accuracy: 0.9637\n"
+      "Epoch 1/10\n",
+      "45/45 [==============================] - 1s 9ms/step - loss: 0.2326 - binary_accuracy: 0.9524 - auc: 0.4748 - val_loss: 0.1556 - val_binary_accuracy: 0.9637 - val_auc: 0.5734\n",
+      "Epoch 2/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1520 - binary_accuracy: 0.9629 - auc: 0.7151 - val_loss: 0.1743 - val_binary_accuracy: 0.9637 - val_auc: 0.5482\n",
+      "Epoch 3/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1351 - binary_accuracy: 0.9629 - auc: 0.8287 - val_loss: 0.1984 - val_binary_accuracy: 0.9637 - val_auc: 0.5382\n",
+      "Epoch 4/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1218 - binary_accuracy: 0.9601 - auc: 0.8831 - val_loss: 0.2245 - val_binary_accuracy: 0.9637 - val_auc: 0.4824\n",
+      "Epoch 5/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1136 - binary_accuracy: 0.9622 - auc: 0.9001 - val_loss: 0.2545 - val_binary_accuracy: 0.9525 - val_auc: 0.5320\n",
+      "Epoch 6/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1144 - binary_accuracy: 0.9622 - auc: 0.8989 - val_loss: 0.2253 - val_binary_accuracy: 0.9665 - val_auc: 0.5860\n",
+      "Epoch 7/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1051 - binary_accuracy: 0.9608 - auc: 0.9220 - val_loss: 0.2714 - val_binary_accuracy: 0.9637 - val_auc: 0.5181\n",
+      "Epoch 8/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1056 - binary_accuracy: 0.9615 - auc: 0.9232 - val_loss: 0.2717 - val_binary_accuracy: 0.9553 - val_auc: 0.5521\n",
+      "Epoch 9/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1043 - binary_accuracy: 0.9643 - auc: 0.9215 - val_loss: 0.2891 - val_binary_accuracy: 0.9553 - val_auc: 0.5788\n",
+      "Epoch 10/10\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0997 - binary_accuracy: 0.9629 - auc: 0.9263 - val_loss: 0.2940 - val_binary_accuracy: 0.9525 - val_auc: 0.5657\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2b4021ba880>"
+       "<tensorflow.python.keras.callbacks.History at 0x2b406e1bf40>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1554,12 +1612,12 @@
    "source": [
     "best_hyppar = tuner.get_best_hyperparameters(num_trials=1)[0]\n",
     "final_model = tuner.hypermodel.build(best_hyppar)\n",
-    "final_model.fit(X_train_player, y_train, epochs=3, validation_split=0.2)"
+    "final_model.fit(X_train_player, y_train, epochs=10, validation_split=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1572,16 +1630,18 @@
       "=================================================================\n",
       "embedding (Embedding)        (None, 3, 20)             2520      \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 3, 32)             672       \n",
+      "dense (Dense)                (None, 3, 64)             1344      \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 3, 48)             1584      \n",
+      "dense_1 (Dense)              (None, 3, 48)             3120      \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 3, 1)              49        \n",
+      "flatten (Flatten)            (None, 144)               0         \n",
       "_________________________________________________________________\n",
-      "activation (Activation)      (None, 3, 1)              0         \n",
+      "dense_2 (Dense)              (None, 1)                 145       \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 1)                 0         \n",
       "=================================================================\n",
-      "Total params: 4,825\n",
-      "Trainable params: 4,825\n",
+      "Total params: 7,129\n",
+      "Trainable params: 7,129\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -1593,53 +1653,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7/7 [==============================] - 0s 1ms/step - loss: 0.2038 - accuracy: 0.9497\n"
+      "7/7 [==============================] - 0s 2ms/step - loss: 0.3332 - binary_accuracy: 0.9397 - auc: 0.5566\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "loss, accuracy = final_model.evaluate(X_test_player, y_test)"
+    "loss, accuracy, auc = final_model.evaluate(X_test_player, y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred = final_model.predict(X_test_player)\n",
-    "pred = np.argmax(pred, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "cm = confusion_matrix(np.array(y_test), pred)\n",
+    "from sklearn.metrics import roc_auc_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = final_model.predict(X_test_player)\n",
+    "pred = (pred >= 0.5).astype('uint8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[186,   3],\n",
+       "       [  9,   1]], dtype=int64)"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cm = confusion_matrix(y_test, pred)\n",
     "cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5420634920634921"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from sklearn.metrics import roc_auc_score\n",
-    "\n",
-    "roc_auc_score(test_Y, pred)"
+    "roc_auc_score(y_test, pred)"
    ]
   }
  ],
