--- a/Player Embedding.ipynb
+++ b/Player Embedding.ipynb
@@ -1898,6 +1898,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_player_with_affinity(affinity, cos_sim, threshold):\n",
+    "    \"\"\"Get a player pair within +/- threshold of the given affinity.\n",
+    "    If more than one pair, randomly selects a pair.\"\"\"\n",
+    "    upp_tri_indx = np.triu_indices(cos_sim.shape[0], 1)\n",
+    "    upp_tri = cos_sim[upp_tri_indx]\n",
+    "    \n",
+    "    if isinstance(affinity, float):\n",
+    "        all_indx = np.where((upp_tri < affinity + threshold) & (upp_tri > affinity - threshold))[0]\n",
+    "        indx = random.choice(all_indx)\n",
+    "    elif affinity == \"max\":\n",
+    "        indx = np.argmax(upp_tri)\n",
+    "    elif affinity == \"min\":\n",
+    "        indx = np.argmin(upp_tri)\n",
+    "    else:\n",
+    "        return \"Invalid affinity value. Input a float or 'min', 'max'\"\n",
+    "\n",
+    "    p1_id = upp_tri_indx[0][indx]\n",
+    "    p2_id = upp_tri_indx[1][indx]\n",
+    "    print(\"{} & {} has affinity {}\".format(load.Player.unique()[p1_id], load.Player.unique()[p2_id], upp_tri[indx]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saroya Tinker & Laurel Hill has affinity 0.49785134196281433\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_player_with_affinity(0.5, cos_sim, 0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 53,
    "metadata": {},
    "outputs": [],
@@ -1918,7 +1962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1927,12 +1971,13 @@
        "0.49591717"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# affinity of specific pair\n",
     "get_affinity('Kaleigh Fratkin', 'Mallory Souliotis', cos_sim)"
    ]
   }
