--- a/Player Embedding.ipynb
+++ b/Player Embedding.ipynb
@@ -1898,7 +1898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,26 +1918,28 @@
     "    else:\n",
     "        return \"Invalid affinity value. Input a float or 'min', 'max'\"\n",
     "\n",
-    "    p1_id = upp_tri_indx[0][indx]\n",
-    "    p2_id = upp_tri_indx[1][indx]\n",
-    "    print(\"{} & {} has affinity {}\".format(load.Player.unique()[p1_id], load.Player.unique()[p2_id], upp_tri[indx]))"
+    "    p1 = load.Player.unique()[upp_tri_indx[0][indx]]\n",
+    "    p2 = load.Player.unique()[upp_tri_indx[1][indx]]\n",
+    "    t1 = load.Team[load.Player == p1].unique()[0]\n",
+    "    t2 = load.Team[load.Player == p2].unique()[0]\n",
+    "    print(\"{} ({}) & {} ({}) has affinity {}\".format(p1, t1, p2, t2, upp_tri[indx]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saroya Tinker & Laurel Hill has affinity 0.49785134196281433\n"
+      "Carlee Turner (Boston Pride) & Lovisa Selander (Boston Pride) has affinity 0.6929029822349548\n"
      ]
     }
    ],
    "source": [
-    "get_player_with_affinity(0.5, cos_sim, 0.01)"
+    "get_player_with_affinity(0.7, cos_sim, 0.01)"
    ]
   },
   {
