--- a/Player Embedding.ipynb
+++ b/Player Embedding.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import pickle"
    ]
   },
   {
@@ -1562,24 +1563,12 @@
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trial 20 Complete [00h 00m 05s]\n",
-      "auc: 0.8482710123062134\n",
-      "\n",
-      "Best auc So Far: 0.9534065127372742\n",
-      "Total elapsed time: 00h 02m 01s\n",
-      "INFO:tensorflow:Oracle triggered exit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "N_EPOCH_SEARCH = 20\n",
-    "tuner.search([np.array(X_train_player), np.array(X_train_event)], y_train, epochs=N_EPOCH_SEARCH, \n",
-    "             validation_split=0.2, callbacks=[stop_early])"
+    "# N_EPOCH_SEARCH = 20\n",
+    "# tuner.search([np.array(X_train_player), np.array(X_train_event)], y_train, epochs=N_EPOCH_SEARCH, \n",
+    "#              validation_split=0.2, callbacks=[stop_early])\n",
+    "# pickle.dump(tuner, open(\"tuner.p\", \"wb\"))"
    ]
   },
   {
@@ -1594,26 +1583,21 @@
       "Results summary\n",
       "Results in random_search\\untitled_project\n",
       "Showing 1 best trials\n",
-      "Objective(name='auc', direction='max')\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
-      "branch_11: 48\n",
-      "activation_11: relu\n",
-      "branch_12: 16\n",
-      "activation_12: tanh\n",
-      "branch_21: 32\n",
-      "activation_21: tanh\n",
-      "branch_22: 64\n",
-      "activation_22: relu\n",
-      "branch_c: 80\n",
-      "activation_c: tanh\n",
-      "learning_rate: 0.001300398010371077\n",
-      "Score: 0.9534065127372742\n"
+      "Objective(name='auc', direction='max')\n"
      ]
     }
    ],
    "source": [
     "tuner.results_summary(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner = pickle.load(open(\"tuner.p\", \"rb\"))"
    ]
   },
   {
@@ -1633,31 +1617,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "45/45 [==============================] - 1s 9ms/step - loss: 0.2004 - binary_accuracy: 0.9475 - auc: 0.4776 - val_loss: 0.1694 - val_binary_accuracy: 0.9609 - val_auc: 0.5520\n",
+      "45/45 [==============================] - 1s 11ms/step - loss: 0.2130 - binary_accuracy: 0.9377 - auc: 0.4612 - val_loss: 0.2021 - val_binary_accuracy: 0.9497 - val_auc: 0.4885\n",
       "Epoch 2/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1534 - binary_accuracy: 0.9629 - auc: 0.6885 - val_loss: 0.1658 - val_binary_accuracy: 0.9609 - val_auc: 0.6358\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1526 - binary_accuracy: 0.9643 - auc: 0.5790 - val_loss: 0.2053 - val_binary_accuracy: 0.9497 - val_auc: 0.6004\n",
       "Epoch 3/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1444 - binary_accuracy: 0.9629 - auc: 0.7548 - val_loss: 0.1722 - val_binary_accuracy: 0.9609 - val_auc: 0.6265\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1449 - binary_accuracy: 0.9643 - auc: 0.7191 - val_loss: 0.2098 - val_binary_accuracy: 0.9497 - val_auc: 0.5897\n",
       "Epoch 4/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1260 - binary_accuracy: 0.9629 - auc: 0.8538 - val_loss: 0.1775 - val_binary_accuracy: 0.9609 - val_auc: 0.6736\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1280 - binary_accuracy: 0.9643 - auc: 0.8363 - val_loss: 0.2282 - val_binary_accuracy: 0.9497 - val_auc: 0.6015\n",
       "Epoch 5/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1108 - binary_accuracy: 0.9629 - auc: 0.9052 - val_loss: 0.1823 - val_binary_accuracy: 0.9609 - val_auc: 0.6991\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1083 - binary_accuracy: 0.9650 - auc: 0.8982 - val_loss: 0.2605 - val_binary_accuracy: 0.9497 - val_auc: 0.5623\n",
       "Epoch 6/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1054 - binary_accuracy: 0.9643 - auc: 0.9155 - val_loss: 0.1919 - val_binary_accuracy: 0.9553 - val_auc: 0.6702\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0970 - binary_accuracy: 0.9671 - auc: 0.9280 - val_loss: 0.3019 - val_binary_accuracy: 0.9497 - val_auc: 0.4985\n",
       "Epoch 7/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0941 - binary_accuracy: 0.9629 - auc: 0.9477 - val_loss: 0.2130 - val_binary_accuracy: 0.9581 - val_auc: 0.6812\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0991 - binary_accuracy: 0.9650 - auc: 0.9273 - val_loss: 0.2850 - val_binary_accuracy: 0.9469 - val_auc: 0.5349\n",
       "Epoch 8/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0903 - binary_accuracy: 0.9657 - auc: 0.9464 - val_loss: 0.2172 - val_binary_accuracy: 0.9441 - val_auc: 0.6640\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0873 - binary_accuracy: 0.9699 - auc: 0.9452 - val_loss: 0.2997 - val_binary_accuracy: 0.9330 - val_auc: 0.5493\n",
       "Epoch 9/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0814 - binary_accuracy: 0.9692 - auc: 0.9553 - val_loss: 0.2280 - val_binary_accuracy: 0.9413 - val_auc: 0.6384\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0841 - binary_accuracy: 0.9727 - auc: 0.9507 - val_loss: 0.3034 - val_binary_accuracy: 0.9469 - val_auc: 0.5158\n",
       "Epoch 10/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0744 - binary_accuracy: 0.9748 - auc: 0.9641 - val_loss: 0.2376 - val_binary_accuracy: 0.9358 - val_auc: 0.6802\n"
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0762 - binary_accuracy: 0.9685 - auc: 0.9628 - val_loss: 0.3307 - val_binary_accuracy: 0.9413 - val_auc: 0.5468\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1c361c47190>"
+       "<tensorflow.python.keras.callbacks.History at 0x2a0f5bde9d0>"
       ]
      },
      "execution_count": 32,
@@ -1720,14 +1704,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7/7 [==============================] - 0s 1ms/step - loss: 0.3742 - binary_accuracy: 0.9095 - auc: 0.5099\n"
+      "7/7 [==============================] - 0s 1ms/step - loss: 0.2438 - binary_accuracy: 0.9447 - auc: 0.5737\n"
      ]
     }
    ],
@@ -1737,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,17 +1741,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[181,   9],\n",
-       "       [  9,   0]], dtype=int64)"
+       "array([[188,   4],\n",
+       "       [  7,   0]], dtype=int64)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1779,16 +1763,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4763157894736842"
+       "0.4895833333333333"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,16 +1790,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "embs = final_model.layers[1].get_weights()[0]"
+    "# run or load\n",
+    "# embs = final_model.layers[1].get_weights()[0]\n",
+    "# pickle.dump(embs, open(\"embs.p\", \"wb\"))\n",
+    "\n",
+    "embs = pickle.load(open(\"embs.p\", \"rb\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1824,7 +1812,7 @@
        "(126, 20)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1835,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1845,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
    "metadata": {
     "scrolled": true
    },
@@ -1872,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "metadata": {
     "scrolled": false
    },
@@ -1898,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1927,14 +1915,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Carlee Turner (Boston Pride) & Lovisa Selander (Boston Pride) has affinity 0.6929029822349548\n"
+      "Taylor Marchin (Connecticut Whale) & Neve Van Pelt (Buffalo Beauts) has affinity 0.7080806493759155\n"
      ]
     }
    ],
@@ -1944,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1964,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1961,7 @@
        "0.49591717"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
