--- a/Player Embedding.ipynb
+++ b/Player Embedding.ipynb
@@ -1575,6 +1575,15 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuner = pickle.load(open(\"tuner.p\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1583,21 +1592,26 @@
       "Results summary\n",
       "Results in random_search\\untitled_project\n",
       "Showing 1 best trials\n",
-      "Objective(name='auc', direction='max')\n"
+      "Objective(name='auc', direction='max')\n",
+      "Trial summary\n",
+      "Hyperparameters:\n",
+      "branch_11: 48\n",
+      "activation_11: relu\n",
+      "branch_12: 16\n",
+      "activation_12: tanh\n",
+      "branch_21: 32\n",
+      "activation_21: tanh\n",
+      "branch_22: 64\n",
+      "activation_22: relu\n",
+      "branch_c: 80\n",
+      "activation_c: tanh\n",
+      "learning_rate: 0.001300398010371077\n",
+      "Score: 0.9534065127372742\n"
      ]
     }
    ],
    "source": [
     "tuner.results_summary(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tuner = pickle.load(open(\"tuner.p\", \"rb\"))"
    ]
   },
   {
@@ -1617,31 +1631,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "45/45 [==============================] - 1s 11ms/step - loss: 0.2130 - binary_accuracy: 0.9377 - auc: 0.4612 - val_loss: 0.2021 - val_binary_accuracy: 0.9497 - val_auc: 0.4885\n",
+      "45/45 [==============================] - 1s 10ms/step - loss: 0.1954 - binary_accuracy: 0.9594 - auc: 0.4712 - val_loss: 0.1311 - val_binary_accuracy: 0.9721 - val_auc: 0.3855\n",
       "Epoch 2/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1526 - binary_accuracy: 0.9643 - auc: 0.5790 - val_loss: 0.2053 - val_binary_accuracy: 0.9497 - val_auc: 0.6004\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1644 - binary_accuracy: 0.9601 - auc: 0.6287 - val_loss: 0.1332 - val_binary_accuracy: 0.9721 - val_auc: 0.4129\n",
       "Epoch 3/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1449 - binary_accuracy: 0.9643 - auc: 0.7191 - val_loss: 0.2098 - val_binary_accuracy: 0.9497 - val_auc: 0.5897\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1529 - binary_accuracy: 0.9601 - auc: 0.7423 - val_loss: 0.1533 - val_binary_accuracy: 0.9721 - val_auc: 0.4795\n",
       "Epoch 4/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1280 - binary_accuracy: 0.9643 - auc: 0.8363 - val_loss: 0.2282 - val_binary_accuracy: 0.9497 - val_auc: 0.6015\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1330 - binary_accuracy: 0.9601 - auc: 0.8523 - val_loss: 0.1529 - val_binary_accuracy: 0.9721 - val_auc: 0.4806\n",
       "Epoch 5/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.1083 - binary_accuracy: 0.9650 - auc: 0.8982 - val_loss: 0.2605 - val_binary_accuracy: 0.9497 - val_auc: 0.5623\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1230 - binary_accuracy: 0.9601 - auc: 0.8915 - val_loss: 0.1653 - val_binary_accuracy: 0.9721 - val_auc: 0.4927\n",
       "Epoch 6/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0970 - binary_accuracy: 0.9671 - auc: 0.9280 - val_loss: 0.3019 - val_binary_accuracy: 0.9497 - val_auc: 0.4985\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1115 - binary_accuracy: 0.9608 - auc: 0.9165 - val_loss: 0.1735 - val_binary_accuracy: 0.9693 - val_auc: 0.5079\n",
       "Epoch 7/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0991 - binary_accuracy: 0.9650 - auc: 0.9273 - val_loss: 0.2850 - val_binary_accuracy: 0.9469 - val_auc: 0.5349\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.1029 - binary_accuracy: 0.9636 - auc: 0.9326 - val_loss: 0.1843 - val_binary_accuracy: 0.9665 - val_auc: 0.5073\n",
       "Epoch 8/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0873 - binary_accuracy: 0.9699 - auc: 0.9452 - val_loss: 0.2997 - val_binary_accuracy: 0.9330 - val_auc: 0.5493\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0980 - binary_accuracy: 0.9650 - auc: 0.9388 - val_loss: 0.1879 - val_binary_accuracy: 0.9693 - val_auc: 0.5328\n",
       "Epoch 9/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0841 - binary_accuracy: 0.9727 - auc: 0.9507 - val_loss: 0.3034 - val_binary_accuracy: 0.9469 - val_auc: 0.5158\n",
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0942 - binary_accuracy: 0.9671 - auc: 0.9434 - val_loss: 0.1991 - val_binary_accuracy: 0.9665 - val_auc: 0.5481\n",
       "Epoch 10/10\n",
-      "45/45 [==============================] - 0s 2ms/step - loss: 0.0762 - binary_accuracy: 0.9685 - auc: 0.9628 - val_loss: 0.3307 - val_binary_accuracy: 0.9413 - val_auc: 0.5468\n"
+      "45/45 [==============================] - 0s 2ms/step - loss: 0.0863 - binary_accuracy: 0.9692 - auc: 0.9559 - val_loss: 0.1984 - val_binary_accuracy: 0.9665 - val_auc: 0.5513\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2a0f5bde9d0>"
+       "<tensorflow.python.keras.callbacks.History at 0x212115e2be0>"
       ]
      },
      "execution_count": 32,
@@ -1711,7 +1725,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7/7 [==============================] - 0s 1ms/step - loss: 0.2438 - binary_accuracy: 0.9447 - auc: 0.5737\n"
+      "7/7 [==============================] - 0s 1ms/step - loss: 0.2280 - binary_accuracy: 0.9497 - auc: 0.6345\n"
      ]
     }
    ],
@@ -1747,8 +1761,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[188,   4],\n",
-       "       [  7,   0]], dtype=int64)"
+       "array([[189,   1],\n",
+       "       [  9,   0]], dtype=int64)"
       ]
      },
      "execution_count": 37,
@@ -1769,7 +1783,7 @@
     {
      "data": {
       "text/plain": [
-       "0.4895833333333333"
+       "0.49736842105263157"
       ]
      },
      "execution_count": 38,
@@ -1922,7 +1936,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Taylor Marchin (Connecticut Whale) & Neve Van Pelt (Buffalo Beauts) has affinity 0.7080806493759155\n"
+      "Amanda Conway (Connecticut Whale) & Rebecca Morse (Metropolitan Riveters) has affinity 0.70943683385849\n"
      ]
     }
    ],
